--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "ring-vec"
 version = "0.1.0"
+description = "A zero-dependency, producer-consumer, fixed-size, item-oriented ring buffer backed by a vector."
+keywords = ["ring", "buffer", "queue", "vector"]
+categories = ["data-structures"]
 authors = ["James Laver <james.laver@gmail.com>"]
+homepage = "https://github.com/irrustible/ring-vec"
+repository = "https://github.com/irrustible/ring-vec"
+documentation = "https://docs.rs/ring-vec"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MPL-2.0"
+readme = "README.md"
 
 [dependencies]
